Fixed image relative pathways and edited about me.

--- a/index.html
+++ b/index.html
@@ -22,29 +22,27 @@
       </div>
       <div id="about" class="row justify-evenly align-center pb-50 about-section">
         <h1 class="col-12">ABOUT ME</h1>
-        <img alt="Thomas Rittwage Portrait" src="/assets/Thomas-Rittwage.jpg" class="col-3 about-image">
+        <img alt="Thomas Rittwage Portrait" src="assets/Thomas-Rittwage.jpg" class="col-3 about-image">
         <div class="col-5 text-align-reset">
           <p>Though I went to highschool in Los Angeles, I spent much of my formative youth in Chicago. After moving to Los Angeles
-          I became very ill and eventually developed type-1 diabetes, which led to a lifelong pursuit of health and wellness. In highschool
-          I played guitar or skateboarded with friends during most of my after-school time, but still miraculously made it to college where
-          I graduated with a major in psychology and a minor in business.</p>
-          <p>I have an older brother who is a web-developer for a cyber-security company in Austin, and a younger
-          sister who does graphic design for an indy rock band. I currently live in Marina del Rey and work remotely
-          in marketing and circulation for a pair of filmmaking &#38; animation magazines, but I hope to transition to web devolpment
-          as the publications move to adopt wordpress. </p>
+          I became very ill and eventually developed type-1 diabetes, which led to a lifelong pursuit of health and wellness.</p>
+          <p>In highschool I played guitar or skateboarded with friends during most of my after-school time. Unsure of what I wanted to do
+          later in life, I went to college and studied what interested me: business and psychology.</p>
+          <p>I currently live in Marina del Rey and work in marketing and circulation for a pair of filmmaking &#38; animation
+          magazines, but I hope to transition to web devolpment when the publications move to wordpress. </p>
         </div>
       </div>
       <div id="tech" class="row justify-evenly pb-50 tech-section">
         <h1 class="col-12">TECHNOLOGIES</h1>
-        <img alt="HTML 5 logo" src="/assets/html-logo.png" class="col-1">
-        <img alt="CSS 3 logo" src="/assets/css-logo.png" class="col-1">
-        <img alt="Javascript logo" src="/assets/js-logo.png" class="col-1">
+        <img alt="HTML 5 logo" src="assets/html-logo.png" class="col-1">
+        <img alt="CSS 3 logo" src="assets/css-logo.png" class="col-1">
+        <img alt="Javascript logo" src="assets/js-logo.png" class="col-1">
       </div>
       <div id="projects" class="row justify-evenly pb-50 projects-section">
         <h1 class="col-12">MY PROJECTS</h1>
-        <img alt="Placeholder Project" src="/assets/placeholder-project.png" class="col-2">
-        <img alt="Placeholder Project" src="/assets/placeholder-project.png" class="col-2">
-        <img alt="Placeholder Project" src="/assets/placeholder-project.png" class="col-2">
+        <img alt="Placeholder Project" src="assets/placeholder-project.png" class="col-2">
+        <img alt="Placeholder Project" src="assets/placeholder-project.png" class="col-2">
+        <img alt="Placeholder Project" src="assets/placeholder-project.png" class="col-2">
       </div>
       <div id="contact" class="row justify-center pb-50 white-text contact-section">
         <h1 class="col-12">CONTACT ME</h1>
